| Summary: | ASTERISK-22273: Asterisk crashes when accessing http://localhost:8088/ari/asterisk/variable | ||
| Reporter: | Paul Belanger (pabelanger) | Labels: | |
| Date Opened: | 2013-08-09 16:37:46 | Date Closed: | 2013-08-21 11:32:01 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_ari |
| Versions: | SVN | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) asterisk_crash.txt ( 1) issueA22273_blah_retrieve_variable-doesnt_take_NULL.patch | |
| Description: | See attached BT | ||
| Comments: | |||